# scrabble

./: .coverage  pyproject.toml
resources/: Lettres.txt
src/scrabble/: main.py
tests/scrabble/: test_main.py
