[project]
name = "scrabble"
version = "0.2.0"
description = "Scrabble game in python stdout in BA1 from EPB at ULB"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    
]

[tool.pytest.ini_options]
pythonpath = [
    ".", 
    "src",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
